   array can contain runtime fields, so can read pointer contents.
   Add pref_item_callbacks array of functions to call like
   toggle_items_foreach().
 * src/prefs.c:
   Add spin_items_foreach().
   Bind spin_indent_width, spin_tab_width widgets to settings.
 * src/ui_utils.c, src/ui_utils.h:
   Add ui_radio_menu_item_set_active_index(),
   ui_radio_menu_item_get_active_index().


2008-07-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/main.c, src/editor.c, src/editor.h:
   Note: this breaks the plugin API for indentation editor_prefs.
   Add GeanyIndentPrefs struct from some GeanyEditorPrefs fields (maybe
   this struct will get used elsewhere too).
   Add editor_init().
 * src/interface.c, geany.glade:
   Add separate Width indent pref.
   Add 'Custom tab width' checkbox pref.


2008-07-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.c, geany.glade:
   Revert editor popup menu Current Word submenu changes. See
   http://lists.uvena.de/geany-devel/2008-July/000101.html.
 * src/sciwrappers.c, src/plugindata.h:
   Add dox for ScintillaFuncs.


2008-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.sh, src/highlighting.c:
   Add missing "error" and heredoc styles to filetype Shellscript
   (related to #2026853).
 * waf, wscript:
   Update waf to its latest SVN rev and exclude some unused modules
   which makes it another 20 KB smaller.
   Update waf script to reflect waf API changes(module Install removed).
 * src/editor.c:
   Fix wrong checks when determining whether a style is a PHP style
   (style SCE_HPHP_COMPLEX_VARIABLE was ignored, closes #2027235).


2008-07-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Only compile filetypes_detect_from_file() if HAVE_PLUGINS is defined.
 * src/plugindata.h:
   Rename p_filetypes->detect_from_filename() to detect_from_file() in
   the plugin API.
 * src/ui_utils.c: